<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/row_spot_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/list_row_report_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_report_wave_height_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/list_row_report_wave_height"
        app:layout_constraintEnd_toEndOf="@+id/row_spot_name_tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/row_spot_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/row_spot_name_tv" />

    <TextView
        android:id="@+id/row_report_wind_speed_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/list_row_report_wind_speed"
        app:layout_constraintEnd_toEndOf="@+id/row_report_wave_height_tv"
        app:layout_constraintStart_toStartOf="@+id/row_report_wave_height_tv"
        app:layout_constraintTop_toBottomOf="@+id/row_report_wave_height_tv" />

    <TextView
        android:id="@+id/row_report_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/list_row_report_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toEndOf="@+id/row_spot_name_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_report_rating_bar_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/list_row_report_report_reliability"
        app:layout_constraintEnd_toEndOf="@+id/row_report_date_tv"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/row_report_date_tv"
        app:layout_constraintTop_toBottomOf="@+id/row_report_date_tv" />

    <RatingBar
        android:id="@+id/row_report_rating_bar"
        style="?android:ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:isIndicator="true"
        android:max="5"
        android:numStars="5"
        android:rating="1"
        android:stepSize="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/row_report_rating_bar_tv"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/row_report_rating_bar_tv"
        app:layout_constraintTop_toBottomOf="@+id/row_report_rating_bar_tv"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>