<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportDetailsFragment">

    <ImageView
        android:id="@+id/report_details_image"
        android:layout_width="0dp"
        android:layout_height="118dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_marginEnd="24dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/report_details_waves_height_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/report_details_waves_height_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/report_details_image"
        app:layout_constraintStart_toStartOf="@+id/report_details_image"
        app:layout_constraintTop_toBottomOf="@+id/report_details_image" />

    <TextView
        android:id="@+id/report_details_wind_speed_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/report_details_waves_height_tv"
        app:layout_constraintStart_toStartOf="@+id/report_details_waves_height_tv"
        app:layout_constraintTop_toBottomOf="@+id/report_details_waves_height_tv" />

    <TextView
        android:id="@+id/report_details_surfers_num_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/report_details_wind_speed_tv"
        app:layout_constraintStart_toStartOf="@+id/report_details_wind_speed_tv"
        app:layout_constraintTop_toBottomOf="@+id/report_details_wind_speed_tv" />

    <CheckedTextView
        android:id="@+id/report_details_is_contaminated_ctv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/report_details_contaminated_cb"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/report_details_surfers_num_tv"
        app:layout_constraintStart_toStartOf="@+id/report_details_surfers_num_tv"
        app:layout_constraintTop_toBottomOf="@+id/report_details_surfers_num_tv" />

    <TextView
        android:id="@+id/report_details_rating_bar_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/report_details_reliability"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/report_details_is_contaminated_ctv"
        app:layout_constraintStart_toStartOf="@+id/report_details_is_contaminated_ctv"
        app:layout_constraintTop_toBottomOf="@+id/report_details_is_contaminated_ctv" />

    <RatingBar
        android:id="@+id/report_details_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:isIndicator="true"
        android:max="5"
        android:numStars="5"
        android:rating="1"
        android:stepSize="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/report_details_rating_bar_tv"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/report_details_rating_bar_tv"
        app:layout_constraintTop_toBottomOf="@+id/report_details_rating_bar_tv"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/report_details_edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/report_details_edit_btn"
        app:layout_constraintEnd_toEndOf="@+id/report_details_rating_bar"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/report_details_delete_btn"
        app:layout_constraintTop_toBottomOf="@+id/report_details_rating_bar" />

    <Button
        android:id="@+id/report_details_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/report_details_delete_btn"
        app:layout_constraintStart_toStartOf="@+id/report_details_rating_bar"
        app:layout_constraintTop_toBottomOf="@+id/report_details_rating_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>